--- a/openApiDocs/beta/NetworkAccess.yml
+++ b/openApiDocs/beta/NetworkAccess.yml
@@ -9890,11 +9890,11 @@ components:
       properties:
         key:
           type: string
-          description: Key.
+          description: Contains the name of the field that a value is associated with.
           nullable: true
         value:
           type: string
-          description: Value.
+          description: Contains the corresponding value for the specified key.
           nullable: true
       additionalProperties:
         type: object
