--- a/openApiDocs/v1.0/Reports.yml
+++ b/openApiDocs/v1.0/Reports.yml
@@ -6,6 +6,91 @@ servers:
   - url: https://graph.microsoft.com/v1.0/
     description: Core
 paths:
+  /admin/reportSettings:
+    get:
+      tags:
+        - admin.adminReportSettings
+      summary: Get adminReportSettings
+      description: Get the tenant-level settings for Microsoft 365 reports.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/adminreportsettings-get?view=graph-rest-1.0
+      operationId: admin_GetReportSetting
+      parameters:
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+      responses:
+        2XX:
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.adminReportSettings'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    patch:
+      tags:
+        - admin.adminReportSettings
+      summary: Update adminReportSettings
+      description: Update tenant-level settings for Microsoft 365 reports.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/adminreportsettings-update?view=graph-rest-1.0
+      operationId: admin_UpdateReportSetting
+      requestBody:
+        description: New navigation property values
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.adminReportSettings'
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.adminReportSettings'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - admin.adminReportSettings
+      summary: Delete navigation property reportSettings for admin
+      operationId: admin_DeleteReportSetting
+      parameters:
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
   /auditLogs:
     get:
       tags:
@@ -6895,6 +6980,17 @@ paths:
         operationName: listMore
 components:
   schemas:
+    microsoft.graph.adminReportSettings:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: adminReportSettings
+          type: object
+          properties:
+            displayConcealedNames:
+              type: boolean
+              description: 'If set to true, all reports conceal user information such as usernames, groups, and sites. If false, all reports show identifiable information. This property represents a setting in the Microsoft 365 admin center. Required.'
+          additionalProperties:
+            type: object
     microsoft.graph.auditLogRoot:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -7397,7 +7493,7 @@ components:
         completionDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
-          description: 'The dateTimeOffset when the job was completed, canceled or aborted. Read-only.'
+          description: 'The dateTimeOffset when the job was completed, canceled, or aborted. Read-only.'
           format: date-time
           nullable: true
         copiesPrinted:
@@ -7915,31 +8011,31 @@ components:
       properties:
         browser:
           type: string
-          description: Indicates the browser information of the used for signing in.
+          description: Indicates the browser information of the used in the sign-in. Populated for devices registered in Microsoft Entra.
           nullable: true
         deviceId:
           type: string
-          description: Refers to the UniqueID of the device used for signing in.
+          description: Refers to the unique ID of the device used in the sign-in. Populated for devices registered in Microsoft Entra.
           nullable: true
         displayName:
           type: string
-          description: Refers to the name of the device used for signing in.
+          description: Refers to the name of the device used in the sign-in. Populated for devices registered in Microsoft Entra.
           nullable: true
         isCompliant:
           type: boolean
-          description: Indicates whether the device is compliant.
+          description: Indicates whether the device is compliant or not.
           nullable: true
         isManaged:
           type: boolean
-          description: Indicates whether the device is managed.
+          description: Indicates if the device is managed or not.
           nullable: true
         operatingSystem:
           type: string
-          description: Indicates the operating system name and version used for signing in.
+          description: Indicates the OS name and version used in the sign-in.
           nullable: true
         trustType:
           type: string
-          description: 'Provides information about whether the signed-in device is Workplace Joined, AzureAD Joined, Domain Joined.'
+          description: 'Indicates information on whether the device used in the sign-in is workplace-joined, Microsoft Entra-joined, domain-joined.'
           nullable: true
       additionalProperties:
         type: object
